# module

./: .gitmodules  Cargo.toml
.github/workflows/: build.yml
module/: customize.sh  module.prop  post-fs-data.sh  service.sh  uninstall.sh
scripts/: bump_version.sh
src/: app.rs  cli.rs  core.rs  main.rs  utils.rs
src/app/: check.rs  config.rs  list.rs  package.rs  upgrade.rs
src/cli/: check.rs  config.rs  list.rs  package.rs  root.rs  upgrade.rs
src/config/: loader.rs  model.rs
src/core/: check.rs  list.rs  types.rs  upgrade.rs
src/utils/: monet_scan.rs  package.rs
