[package]
name = "cip"
version = "0.3.4"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
apk-info = { git = "https://github.com/immortal521/apk-info" }
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.32"
hex = "0.4.3"
nix = { version = "0.31.1", default-features = false, features = [
  "user",
  "fs",
] }
reqwest = { version = "0.12.12", default-features = false, features = [
  "blocking",
  "json",
  "gzip",
  "rustls-tls-webpki-roots",
  "stream",
] }
rustls-platform-verifier = "0.6.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
toml_edit = "0.25.10"
walkdir = "2.5.0"
zip = "8.4.0"
tokio = { version = "1.50.0", features = ["full"] }
once_cell = "1.21.4"
sha2 = "0.11.0"
futures = "0.3.32"
